kubernetes/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/befake-network: "true"
        io.kompose.service: api-gateway
    spec:
      containers:
        - name: api-gateway
          imagePullPolicy: Always
          image: pintertamas/api-gateway:SNAPSHOT-0.0.1
          ports:
            - containerPort: 8765
          resources: {}
      restartPolicy: Always
status: {}
