kubernetes/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/befake-network: "true"
        io.kompose.service: auth-service
    spec:
      containers:
        - env:
            - name: EUREKA.CLIENT.SERVICEURL.DEFAULTZONE
              value: http://naming-server:8761/eureka
            - name: SPRING.ZIPKIN.BASEURL
              value: http://zipkin-server:9411
          image: authorization-service:latest
          name: auth-service
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
