kubernetes/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/befake-network: "true"
        io.kompose.service: kafka
    spec:
      containers:
        - env:
            - name: HOSTNAME_COMMAND
              value: "route -n | awk '/UG[ \t]/{print $2}'"
            - name: KAFKA_CREATE_TOPICS
              value: befake:2:3,registration:2:3,post:2:3,comment:2:3,reaction:2:3,friend:2:3
            - name: KAFKA_MESSAGE_MAX_BYTES
              value: "2000000"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zk:2181
          image: wurstmeister/kafka
          name: kafka
          ports:
            - containerPort: 9092
          resources: {}
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: kafka-claim0
      restartPolicy: Always
      volumes:
        - name: kafka-claim0
          persistentVolumeClaim:
            claimName: kafka-claim0
status: {}
