kubernetes/postgres-deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-<servicename>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-<servicename>
  template:
    metadata:
      labels:
        app: postgres-<servicename>
    spec:
      containers:
        - name: postgres-container-<servicename>
          image: postgres:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data-<servicename>
              name: postgredb-<servicename>
      volumes:
        - name: postgredb-<servicename>
          persistentVolumeClaim:
            claimName: postgres-pv-claim-<servicename>
