kubernetes/time-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: time-service
  name: time-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: time-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/befake-network: "true"
        io.kompose.service: time-service
    spec:
      containers:
        - env:
            - name: KAFKA.URL
              value: kafka:9092
            - name: SPRING.ZIPKIN.BASEURL
              value: http://zipkin-server:9411
          image: pintertamas/time-service:SNAPSHOT-0.0.1
          name: time-service
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
