kubernetes/zipkin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: zipkin-server
  name: zipkin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zipkin-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/befake-network: "true"
        io.kompose.service: zipkin-server
    spec:
      containers:
        - env:
            - name: RABBIT_URI
              value: amqp://guest:guest@rabbitmq:5672
          image: openzipkin/zipkin:2.23
          name: zipkin-server
          ports:
            - containerPort: 9411
          resources: {}
      restartPolicy: Always
status: {}
