kubernetes/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  ports:
    - name: "8765"
      port: 8765
      targetPort: 8765
  selector:
    io.kompose.service: api-gateway
    run: api-gateway
status:
  loadBalancer: {}
