kubernetes/friend-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: friend-service
  name: friend-service
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 8003
  selector:
    io.kompose.service: friend-service
status:
  loadBalancer: {}
