kubernetes/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: notification-service
  name: notification-service
spec:
  ports:
    - name: "8101"
      port: 8101
      targetPort: 8101
  selector:
    io.kompose.service: notification-service
status:
  loadBalancer: {}
