kubernetes/postgres-failing-config-save.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
  creationTimestamp: "2022-12-02T20:10:38Z"
  generation: 6
  name: postgres-user
  namespace: default
  resourceVersion: "31625"
  uid: f0a9709f-9204-41a7-9d51-f065d73f9e91
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: postgres-user
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2022-12-02T20:41:33Z"
      creationTimestamp: null
      labels:
        app: postgres-user
    spec:
      containers:
        - env:
            - name: POSTGRES_DB_USER
              valueFrom:
                configMapKeyRef:
                  key: Postgres_DB
                  name: postgres-config-user
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  key: Postgres_User
                  name: postgres-secret
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: Postgres_Password
                  name: postgres-secret
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          name: postgres-container-user
          ports:
            - containerPort: 5432
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb-user
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: postgredb-user
          persistentVolumeClaim:
            claimName: postgres-pv-claim-user
status:
  conditions:
    - lastTransitionTime: "2022-12-02T20:41:22Z"
      lastUpdateTime: "2022-12-02T20:41:22Z"
      message: Deployment does not have minimum availability.
      reason: MinimumReplicasUnavailable
      status: "False"
      type: Available
    - lastTransitionTime: "2022-12-02T20:25:57Z"
      lastUpdateTime: "2022-12-02T20:41:34Z"
      message: ReplicaSet "postgres-user-7b698bcffd" is progressing.
      reason: ReplicaSetUpdated
      status: "True"
      type: Progressing
  observedGeneration: 6
  replicas: 2
  unavailableReplicas: 2
  updatedReplicas: 1
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-12-02T20:31:56Z"
  name: postgres-user
  namespace: default
  resourceVersion: "30520"
  uid: 44747cd8-6309-43ab-8228-6461c3e1990d
spec:
  clusterIP: 172.21.113.48
  clusterIPs:
    - 172.21.113.48
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - nodePort: 32630
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres-user
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-12-02T20:31:56Z"
  name: postgres-user
  namespace: default
  resourceVersion: "30520"
  uid: 44747cd8-6309-43ab-8228-6461c3e1990d
spec:
  clusterIP: 172.21.113.48
  clusterIPs:
    - 172.21.113.48
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - nodePort: 32630
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres-user
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
